Mabede displays weather data in the console.

--- a/mabede/package.json
+++ b/mabede/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/GRV96/mabede#readme",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "express": "^4.19.2"
   }
 }
