--- a/mabede/package.json
+++ b/mabede/package.json
@@ -4,7 +4,7 @@
   "description": "A database accessed through a Node.js API",
   "main": "mabede.js",
   "scripts": {
-    "start": "node ./mabede.js"
+    "start": "node ./src/mabede.js"
   },
   "repository": {
     "type": "git",
