--- a/mabede/package.json
+++ b/mabede/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/GRV96/mabede#readme",
   "dependencies": {
     "body-parser": "^1.20.2",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "mysql2": "^3.11.0"
   }
 }
