--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,9 @@ services:
       context: ./mabede
     ports:
       - 80:3000
+    restart: always
     depends_on:
-      database:
-        condition: service_completed_successfully
+      - database
 
   database:
     container_name: database
