Volume mapped to the right mysql container directory

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     env_file:
       - ./env/database.env
     volumes:
-      - mabede-database:/database
+      - mabede-database:/var/lib/mysql
 
 volumes:
   mabede-database:
