--- a/mabede/package.json
+++ b/mabede/package.json
@@ -4,7 +4,7 @@
   "description": "A database accessed through a Node.js API",
   "main": "mabede.js",
   "scripts": {
-    "start": "node ./mabede.js"
+    "start": "node ./src/mabede.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/GRV96/mabede#readme",
   "dependencies": {
     "body-parser": "^1.20.2",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "mysql2": "^3.11.0"
   }
 }
