--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
     ports:
       - 80:3000
     restart: always
+    env_file:
+      - ./env/database.env
     depends_on:
       - database
 
