--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     container_name: mabede
     build:
       context: ./mabede
+      dockerfile: ./production.dockerfile
     ports:
       - 80:3000
     restart: always
