--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,9 @@ services:
     build:
       context: ./mabede
       dockerfile: ./production.dockerfile
+      args:
+        EXPOSED_PORT: 3000
+        NODE_VERSION: 22.5
     ports:
       - 80:3000
     restart: always
