Comment about service overriding

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -1,5 +1,5 @@
 services:
-  mabede:
+  mabede: # Overrides service mabede in docker-compose.yml.
     build:
       dockerfile: ./development.dockerfile
     volumes:
