--- a/mabede/package.json
+++ b/mabede/package.json
@@ -4,7 +4,8 @@
   "description": "A database accessed through a Node.js API",
   "main": "mabede.js",
   "scripts": {
-    "start": "node ./src/mabede.js"
+    "start": "node ./src/mabede.js",
+    "start-dev": "nodemon ./src/mabede.js"
   },
   "repository": {
     "type": "git",
@@ -20,5 +21,8 @@
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
     "mysql2": "^3.11.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
   }
 }
